--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,21 +43,21 @@ jobs:
       env:
         GOOS: linux
         GOARCH: amd64
-      run: go build -o ${{ github.event.repository.name }}
+      run: go build -o ms-graph-collector
     - name: Zip Linux x64
       id: zip_linux_x64
       run: |
-        zip --junk-paths ${{ github.event.repository.name }}_linux_x64 ${{ github.event.repository.name }}
+        zip --junk-paths ms-graph-collector_linux_x64 ms-graph-collector
     - name: Build Windows x64
       id: build_windows_x64
       env:
         GOOS: windows
         GOARCH: amd64
-      run: go build -o ${{ github.event.repository.name }}.exe
+      run: go build -o ms-graph-collector.exe
     - name: Zip Windows x64
       id: zip_windows_x64
       run: |
-        zip --junk-paths ${{ github.event.repository.name }}_win_x64 ${{ github.event.repository.name }}.exe
+        zip --junk-paths ms-graph-collector_win_x64 ms-graph-collector.exe
     - name: Branch name
       id: branch_name
       run: |
@@ -87,8 +87,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ github.event.repository.name }}_linux_x64.zip
-        asset_name: ${{ github.event.repository.name }}_linux_x64.zip
+        asset_path: ./ms-graph-collector_linux_x64.zip
+        asset_name: ms-graph-collector_linux_x64.zip
         asset_content_type: application/zip
     - name: Upload Windows x64 Asset
       id: upload-windows-x64-asset 
@@ -97,8 +97,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ github.event.repository.name }}_win_x64.zip
-        asset_name: ${{ github.event.repository.name }}_win_x64.zip
+        asset_path: ./ms-graph-collector_win_x64.zip
+        asset_name: ms-graph-collector_win_x64.zip
         asset_content_type: application/zip        
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -113,8 +113,8 @@ jobs:
       with:
         push: true
         tags: |
-          cjlapao/s${{ github.event.repository.name }}:latest
-          cjlapao/${{ github.event.repository.name }}:${{ steps.tag_version.outputs.new_tag }}
+          cjlapao/ms-graph-collector:latest
+          cjlapao/ms-graph-collector:${{ steps.tag_version.outputs.new_tag }}
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
     - name: Run chart-releaser
